--- a/STP_Dev_Community/templates/home.html
+++ b/STP_Dev_Community/templates/home.html
@@ -1,19 +1,25 @@
-{% extends 'base.html' %}
-
-{% block content %}
-    <h2>Recent Doubts</h2>
-    <ul class="doubts-list">
-        {% for doubt in doubts %}
-            <li>
-                <h3><a href="{% url 'doubts:doubt_detail' doubt.pk %}">[{{doubt.id}}].{{ doubt.title }}</a></h3>
-                <p>{{ doubt.description }}</p>
-                <p><small>Posted by: {{ doubt.author }}</small></p>
-            </li>
-        {% empty %}
-            <p>No doubts posted yet!</p>
-        {% endfor %}
-    </ul>
+{% extends 'base.html' %} {% block content %}
+<div class="container">
+  <h2 class="page-title">Recent Doubts</h2>
+  <ul class="doubts-list">
+    {% for doubt in doubts %}
+    <li class="doubt-item">
+      <h3 class="doubt-title">
+        <a href="{% url 'doubts:doubt_detail' doubt.pk %}"
+          >{{ doubt.title }}</a
+        >
+      </h3>
+      <p class="doubt-description">{{ doubt.description }}</p>
+      <p class="doubt-author"><small>Posted by: {{ doubt.author }}</small></p>
+    </li>
+    {% empty %}
+    <p class="no-doubts">No doubts posted yet!</p>
+    {% endfor %}
+  </ul>
+  <div class="buttons-container">
     <a href="{% url 'doubts:create_doubt' %}">
-        <button>Create New Doubt</button>
+      <button class="primary-btn">Create New Doubt</button>
     </a>
+  </div>
+</div>
 {% endblock %}
